--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <h2>About Me</h2>
             <p>Hi, I'm Jakub Pospieszny, a DevOps specialist and solo freelancer. I optimize deployments, automate workflows, and ensure systems run smoothly. Fueled by a passion for technology, I’m constantly expanding my skillset in computer hardware and becoming familiar with DevOps methodology.</p>
             <div class="social-links">
-              <a href="https://github.com/your-github" target="_blank">GitHub</a>
-              <a href="https://www.linkedin.com/in/your-linkedin" target="_blank">LinkedIn</a>
+              <a href="https://github.com/Kobeep" target="_blank">GitHub</a>
+              <a href="https://pl.linkedin.com/in/jakub-pospieszny-085a632a0" target="_blank">LinkedIn</a>
             </div>
           </div>
         </div>
