--- a/projects.html
+++ b/projects.html
@@ -37,14 +37,21 @@
         <h2>Freelance Projects</h2>
         <div class="project-list">
           <div class="project-card">
-            <h3>Project One</h3>
-            <p>Description of Project One detailing technologies and impact.</p>
-            <a href="https://github.com/your-github/project-one" target="_blank" class="btn">View on GitHub</a>
+            <h3>Project One: linux-vm-provisioning-examples</h3>
+            <p>The project demonstrates two approaches to automatically creating and configuring a Linux environment based on QEMU/KVM virtual machines.</p>
+            <a href="https://github.com/kaszebenetes/linux-vm-provisioning-examples" target="_blank" class="btn">View on GitHub</a>
           </div>
           <div class="project-card">
-            <h3>Project Two</h3>
-            <p>Description of Project Two outlining your role and results achieved.</p>
-            <a href="https://github.com/your-github/project-two" target="_blank" class="btn">View on GitHub</a>
+            <h3>Project Two: Docker Container Monitor</h3>
+            <p>Docker Container Monitor is a lightweight CLI tool written in Go that monitors running Docker containers and their services. It provides real-time information about container states, checks service availability, and even supports remote monitoring via SSH. The project also includes a Python installer script for an automated setup.</p>
+            <a href="https://github.com/Kobeep/Docker_Container_monitor" target="_blank" class="btn">View on GitHub</a>
+          </div>
+        <h2>Collaborations:</h2>
+        <div class="project-list">
+          <div class="project-card">
+            <h3>ansible-ops-workstation</h3>
+            <p>Ansible playbooks for provisioning Fedora Workstations with tools which are commonly used in DevOps environments. </p>
+            <a href="https://github.com/mikeeq/ansible-ops-workstation" target="_blank" class="btn">View on GitHub</a>
           </div>
           <!-- Add more projects as needed -->
         </div>
