--- a/projects.html
+++ b/projects.html
@@ -46,6 +46,7 @@
             <p>Docker Container Monitor is a lightweight CLI tool written in Go that monitors running Docker containers and their services. It provides real-time information about container states, checks service availability, and even supports remote monitoring via SSH. The project also includes a Python installer script for an automated setup.</p>
             <a href="https://github.com/Kobeep/Docker_Container_monitor" target="_blank" class="btn">View on GitHub</a>
           </div>
+        </div>
         <h2>Collaborations:</h2>
         <div class="project-list">
           <div class="project-card">
