--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
         <h2>Contact Me</h2>
         <p>If you’d like to work with me or have any questions, feel free to reach out:</p>
         <ul class="contact-info">
-          <li>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></li>
+          <li>Email: <a href="mailto:your.email@example.com">kuba.pospieszny@gmail.com</a></li>
           <!-- Additional contact details can be added -->
         </ul>
       </div>
